DRY up Compass and Sprockets configuration.

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,8 +6,8 @@
 
   <title>Canon Examples</title>
 
-  <link rel="stylesheet" type="text/css" href="/assets/canon/stylesheets/canon.css">
-  <script type="text/javascript" src="/assets/canon/javascripts/canon.js"></script>
+  <link rel="stylesheet" type="text/css" href="/assets/canon.css">
+  <script type="text/javascript" src="/assets/canon.js"></script>
 </head>
 <body>
   <div class="container">
