Add an example RSpec test.

--- a/examples/index.html
+++ b/examples/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <div class="hero-unit">
-      <h1>Welcome to Canon!</h1>
+      <h1 id="page-title">Welcome to Canon!</h1>
       <p>This is a demo of asset compilation using Canon's Sprockets-based assets pipeline. This file should be thrown away.</p>
     </div>
   </div>
