--- a/examples/index.html
+++ b/examples/index.html
@@ -10,11 +10,49 @@
   <script type="text/javascript" src="/assets/canon.js"></script>
 </head>
 <body>
-  <div class="container">
-    <div class="hero-unit">
-      <h1 id="page-title">Welcome to Canon!</h1>
-      <p>This is a demo of asset compilation using Canon's Sprockets-based assets pipeline. This file should be thrown away.</p>
-    </div>
-  </div>
+  <h1>Typography</h1>
+  <h2>Typography</h2>
+  <h3>Typography</h3>
+  <h4>Typography</h4>
+  <h5>Typography</h5>
+  <h6>Typography</h6>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor <strong>incididunt ut labore</strong> et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation <em>ullamco laboris nisi</em> ut aliquip ex ea commodo
+  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  cillum <a href="#">dolore eu fugiat nulla</a> pariatur. Excepteur sint occaecat cupidatat non
+  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  <hr>
+
+  <ol>
+    <li>One</li>
+    <li>
+      Two
+      <ul>
+        <li>One</li>
+        <li>One</li>
+      </ul>
+    </li>
+    <li>Three</li>
+  </ol>
+
+  <ul>
+    <li>One</li>
+    <li>
+      Two
+      <ol>
+        <li>One</li>
+        <li>One</li>
+      </ol>
+    </li>
+    <li>Three</li>
+  </ul>
+
+  <dl>
+    <dt>Key</dt>
+    <dd>Value</dd>
+  </dl>
 </body>
 </html>
