--- a/examples/layout.html
+++ b/examples/layout.html
@@ -12,7 +12,22 @@
 <body>
   <div class="l-wrapper">
   	<div class="l-header">
-
+  		<div class="nav-top l-content">
+  			
+  		</div>
+  		<div class="nav-logo l-content">
+  			<a href="#"><span></span></a>
+  		</div>
+  		<div class="navbar">
+  			<ul class="nav l-content">
+					<li><a href="#">Link One</a></li>
+					<li><a href="#">Link Two</a></li>
+					<li><a href="#">Link Three</a></li>
+					<li><a href="#">Link Four</a></li>
+					<li><a href="#">Link Five</a></li>
+					<li><a href="#">Link Six</a></li>
+				</ul>
+			</div>
   	</div>
   	<div class="l-body">
   		<div class="l-inner">
