added reach menu style

--- a/examples/layout.html
+++ b/examples/layout.html
@@ -15,13 +15,13 @@
   		<div class="nav-top l-content">
   			
   		</div>
-  		<div class="nav-logo l-content">
+  		<div class="nav-brand l-content">
   			<a href="#"><span></span></a>
   		</div>
   		<div class="navbar">
   			<ul class="nav l-content">
 					<li><a href="#">Link One</a></li>
-					<li><a href="#">Link Two</a></li>
+					<li class="is-active"><a href="#">Link Two</a></li>
 					<li><a href="#">Link Three</a></li>
 					<li><a href="#">Link Four</a></li>
 					<li><a href="#">Link Five</a></li>
