--- a/spec/screenshot/buttons.html
+++ b/spec/screenshot/buttons.html
@@ -32,5 +32,27 @@
     <a class="btn disabled">Disabled</a>
     <a class="btn hover">Hover</a>
   </p>
+  <!-- PRIMARY BUTTONS -->
+  <!-- Button Tag -->
+  <p>
+    <button class="btn btn-primary">Default</button>
+    <button class="btn btn-primary active">Active</button>
+    <button class="btn btn-primary disabled">Disabled</button>
+    <button class="btn btn-primary hover">Hover</button>
+  </p>
+  <!-- Input Tag -->
+  <p>
+    <input class="btn btn-primary" type="button" value="Default">
+    <input class="btn btn-primary active" type="button" value="Active">
+    <input class="btn btn-primary disabled" type="button" value="Disabled">
+    <input class="btn btn-primary hover" type="button" value="Hover">
+  </p>
+  <!-- Anchor Tag -->
+  <p>
+    <a class="btn btn-primary">Default</a>
+    <a class="btn btn-primary active">Active</a>
+    <a class="btn btn-primary disabled">Disabled</a>
+    <a class="btn btn-primary hover">Hover</a>
+  </p>
 </body>
 </html>
