Login button styles + screenshot tests.

--- a/spec/screenshot/buttons.html
+++ b/spec/screenshot/buttons.html
@@ -54,5 +54,27 @@
     <a class="btn btn-primary disabled">Disabled</a>
     <a class="btn btn-primary hover">Hover</a>
   </p>
+  <!-- LOGIN BUTTONS -->
+  <!-- Button Tag -->
+  <p>
+    <button class="btn btn-login">Default</button>
+    <button class="btn btn-login active">Active</button>
+    <button class="btn btn-login disabled">Disabled</button>
+    <button class="btn btn-login hover">Hover</button>
+  </p>
+  <!-- Input Tag -->
+  <p>
+    <input class="btn btn-login" type="button" value="Default">
+    <input class="btn btn-login active" type="button" value="Active">
+    <input class="btn btn-login disabled" type="button" value="Disabled">
+    <input class="btn btn-login hover" type="button" value="Hover">
+  </p>
+  <!-- Anchor Tag -->
+  <p>
+    <a class="btn btn-login">Default</a>
+    <a class="btn btn-login active">Active</a>
+    <a class="btn btn-login disabled">Disabled</a>
+    <a class="btn btn-login hover">Hover</a>
+  </p>
 </body>
 </html>
