Link button styles + screenshot tests.

--- a/spec/screenshot/buttons.html
+++ b/spec/screenshot/buttons.html
@@ -76,5 +76,27 @@
     <a class="btn btn-login disabled">Disabled</a>
     <a class="btn btn-login hover">Hover</a>
   </p>
+  <!-- LINK BUTTONS -->
+  <!-- Button Tag -->
+  <p>
+    <button class="btn btn-link">Default</button>
+    <button class="btn btn-link active">Active</button>
+    <button class="btn btn-link disabled">Disabled</button>
+    <button class="btn btn-link hover">Hover</button>
+  </p>
+  <!-- Input Tag -->
+  <p>
+    <input class="btn btn-link" type="button" value="Default">
+    <input class="btn btn-link active" type="button" value="Active">
+    <input class="btn btn-link disabled" type="button" value="Disabled">
+    <input class="btn btn-link hover" type="button" value="Hover">
+  </p>
+  <!-- Anchor Tag -->
+  <p>
+    <a class="btn btn-link">Default</a>
+    <a class="btn btn-link active">Active</a>
+    <a class="btn btn-link disabled">Disabled</a>
+    <a class="btn btn-link hover">Hover</a>
+  </p>
 </body>
 </html>
