use .active class

--- a/examples/layout.html
+++ b/examples/layout.html
@@ -21,7 +21,7 @@
   		<div class="navbar">
   			<ul class="nav l-content">
 					<li><a href="#">Link One</a></li>
-					<li class="is-active"><a href="#">Link Two</a></li>
+					<li class="active"><a href="#">Link Two</a></li>
 					<li><a href="#">Link Three</a></li>
 					<li><a href="#">Link Four</a></li>
 					<li><a href="#">Link Five</a></li>
