extend l-content inside classes that had it adjoined

--- a/examples/layout.html
+++ b/examples/layout.html
@@ -13,13 +13,13 @@
   <div class="l-wrapper">
   	<div class="l-header">
   		<div class="nav-top l-content">
-  			
-  		</div>
-  		<div class="nav-brand l-content">
+				
+			</div>
+  		<div class="nav-brand">
   			<a href="#"><span></span></a>
   		</div>
   		<div class="navbar">
-  			<ul class="nav l-content">
+  			<ul class="nav">
 					<li><a href="#">Link One</a></li>
 					<li class="active"><a href="#">Link Two</a></li>
 					<li><a href="#">Link Three</a></li>
