--- a/examples/layout.html
+++ b/examples/layout.html
@@ -16,24 +16,9 @@
         <div class="l-content">
             <ul class="nav">
               <li><a href="#">Link One</a></li>
-              <li class="menu">
-                <a class="active" href="#">Link Two</a>
-                <div class="dropdown">
-                  <ul class="nav">
-                    <li><a href="#">Link One</a></li>
-                    <li class="active"><a href="#">Link Two</a></li>
-                    <li><a href="#">Link Three</a></li>
-                    <li><a href="#">Link Four</a></li>
-                    <li><a href="#">Link Five</a></li>
-                    <li><a href="#">Link Six</a></li>
-                  </ul>
-                </div>
-              </li>
+              <li><a href="#">Link Two</a></li>
               <li><a href="#">Link Three</a></li>
-              <li><a href="#">Link Four</a></li>
-              <li><a href="#">Link Five</a></li>
-              <li><a href="#">Link Six</a></li>
-            </ul>    
+            </ul>
         </div>
       </div>
       <div class="nav-brand">
