Add fieldset and legend styles.

--- a/spec/screenshot/forms.html
+++ b/spec/screenshot/forms.html
@@ -11,21 +11,28 @@
 </head>
 <body>
   <form>
-    <label>Label Name</label>
-    <input type="text">
-    <input type="password">
-    <select>
-      <option>One</option>
-      <option>Two</option>
-      <option>Three</option>
-    </select>
-    <select multiple>
-      <option>One</option>
-      <option>Two</option>
-      <option>Three</option>
-    </select>
-    <input type="file">
-    <input type="file" multiple>
+    <fieldset>
+      <legend>Fieldset One</legend>
+      <label>Label One</label>
+      <input type="text">
+      <input type="password">
+      <select>
+        <option>One</option>
+        <option>Two</option>
+        <option>Three</option>
+      </select>
+      <input type="file">
+      <input type="file" multiple>
+    </fieldset>
+    <fieldset>
+      <legend>Fieldset Two</legend>
+      <label>Label Two</label>
+      <select multiple>
+        <option>One</option>
+        <option>Two</option>
+        <option>Three</option>
+      </select>
+    </fieldset>
   </form>
 </body>
 </html>
