--- a/spec/screenshot/layout.html
+++ b/spec/screenshot/layout.html
@@ -24,7 +24,7 @@
       <div class="nav-brand">
         <a href="#"><span></span></a>
       </div>
-      <div class="navbar">
+      <div class="nav-primary">
         <ul class="nav">
           <li><a href="#">Link One</a></li>
           <li class="active"><a href="#">Link Two</a></li>
