Add checkbox and radio layouts.

--- a/spec/screenshot/forms.html
+++ b/spec/screenshot/forms.html
@@ -33,6 +33,44 @@
         <option>Three</option>
       </select>
     </fieldset>
+    <fieldset>
+      <legend>Checkbox and Radio Groups</legend>
+      <label class="checkbox">
+        <input type="checkbox">
+        Option One
+      </label>
+      <label class="checkbox">
+        <input type="checkbox">
+        Option Two
+      </label>
+      <label class="radio">
+        <input type="radio">
+        Option One
+      </label>
+      <label class="radio">
+        <input type="radio">
+        Option Two
+      </label>
+    </fieldset>
+    <fieldset>
+      <legend>Inline Checkbox and Radio Groups</legend>
+      <label class="checkbox inline">
+        <input type="checkbox">
+        Option One
+      </label>
+      <label class="checkbox inline">
+        <input type="checkbox">
+        Option Two
+      </label>
+      <label class="radio inline">
+        <input type="radio">
+        Option One
+      </label>
+      <label class="radio inline">
+        <input type="radio">
+        Option Two
+      </label>
+    </fieldset>
   </form>
 </body>
 </html>
