Add classes for specifying input sizes.

--- a/spec/screenshot/forms.html
+++ b/spec/screenshot/forms.html
@@ -71,6 +71,15 @@
         Option Two
       </label>
     </fieldset>
+    <fieldset>
+      <legend>Input Sizes</legend>
+      <input type="text" class="input-mini"><br>
+      <input type="text" class="input-small"><br>
+      <input type="text" class="input-medium"><br>
+      <input type="text" class="input-large"><br>
+      <input type="text" class="input-xlarge"><br>
+      <input type="text" class="input-xxlarge"><br>
+    </fieldset>
   </form>
 </body>
 </html>
