--- a/spec/screenshot/forms.html
+++ b/spec/screenshot/forms.html
@@ -81,5 +81,57 @@
       <input type="text" class="input-xxlarge"><br>
     </fieldset>
   </form>
+  <form class="form-horizontal">
+    <fieldset>
+      <legend>Horizontal Form</legend>
+      <div class="control-group">
+        <label class="control-label">One</label>
+        <div class="controls">
+          <input type="text">
+        </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label">Two</label>
+        <div class="controls">
+          <select>
+            <option>One</option>
+            <option>Two</option>
+          </select>
+        </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label">Three</label>
+        <div class="controls">
+          <label class="radio">
+            <input type="radio" name="three">
+            <strong>A</strong><br>
+            A Sub
+          </label>
+          <label class="radio">
+            <input type="radio" name="three">
+            <strong>B</strong><br>
+            B-Sub
+          </label>
+        </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label">Four</label>
+        <div class="controls">
+          <input type="text"> GB
+          <div>This is some subtext.</div>
+        </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label">Five</label>
+        <div class="controls">
+          <input type="text">
+          <select>
+            <option>One</option>
+            <option>One</option>
+          </select>
+        </div>
+      </div>
+    </fieldset>
+  </form>
 </body>
 </html>
