Support inline and block help text.

--- a/spec/screenshot/forms.html
+++ b/spec/screenshot/forms.html
@@ -87,7 +87,7 @@
       <div class="control-group">
         <label class="control-label">One</label>
         <div class="controls">
-          <input type="text">
+          <input type="text"><span class="help-inline">This is inline help text.</span>
         </div>
       </div>
       <div class="control-group">
@@ -105,12 +105,12 @@
           <label class="radio">
             <input type="radio" name="three">
             <strong>A</strong><br>
-            A Sub
+            <span class="help-block">A Sub</span>
           </label>
           <label class="radio">
             <input type="radio" name="three">
-            <strong>B</strong><br>
-            B-Sub
+            <strong>B</strong>
+            <span class="help-block">B-Sub</span>
           </label>
         </div>
       </div>
@@ -118,7 +118,7 @@
         <label class="control-label">Four</label>
         <div class="controls">
           <input type="text"> GB
-          <div>This is some subtext.</div>
+          <span class="help-block">This is some subtext.</span>
         </div>
       </div>
       <div class="control-group">
