--- a/spec/screenshot/forms.html
+++ b/spec/screenshot/forms.html
@@ -99,7 +99,7 @@
           </select>
         </div>
       </div>
-      <div class="control-group">
+      <div class="control-group error">
         <label class="control-label">Three</label>
         <div class="controls">
           <label class="radio">
@@ -131,7 +131,49 @@
           </select>
         </div>
       </div>
+      <div class="control-group error">
+        <span class="validation-block"><i class="icon-exclamation-sign"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+      </div>
     </fieldset>
+    <fieldset>
+      <legend>Validation</legend>
+      <div class="control-group success">
+        <label class="control-label">Success</label>
+        <div class="controls">
+          <input type="text">
+          <span class="help-inline">This is inline help.</span>
+          <span class="validation-inline"><i class="icon-ok-circle"></i>This is an inline success.</span>
+        </div>
+      </div>
+      <div class="control-group success">
+        <label class="control-label">Success</label>
+        <div class="controls">
+          <input type="text">
+          <span class="help-block">This is block help.</span>
+          <span class="validation-block"><i class="icon-ok-circle"></i>This is a block success.</span>
+        </div>
+      </div>
+      <div class="control-group error">
+        <label class="control-label">Error</label>
+        <div class="controls">
+          <input type="text">
+          <span class="help-inline">This is inline help.</span>
+          <span class="validation-inline"><i class="icon-exclamation-sign"></i>This is an inline error.</span>
+        </div>
+      </div>
+      <div class="control-group error">
+        <label class="control-label">Error</label>
+        <div class="controls">
+          <input type="text">
+          <span class="help-block">This is block help.</span>
+          <span class="validation-block"><i class="icon-exclamation-sign"></i>This is a block error.</span>
+        </div>
+      </div>
   </form>
 </body>
 </html>
