Adding Footer Features

--- a/examples/layout.html
+++ b/examples/layout.html
@@ -91,7 +91,14 @@
   </div>
   <div class="l-footer">
     <div class="l-inner">
-      <div class="l-content"></div>
+      <div class="footer l-content">
+        <ul class="links">
+          <li><a href="#">&copy; 2013 Rackspace, US</a></li>
+          <li><a href="">Link Text</a></li>
+          <li><a href="">Link Text</a></li>
+        </ul>
+        <p class="link pull-right">Lorem Ipsum and <a href="#">Feedback</a></p>
+      </div>
     </div>
   </div>
 </body>
