remove link from copyright

--- a/examples/layout.html
+++ b/examples/layout.html
@@ -93,7 +93,7 @@
     <div class="l-inner">
       <div class="footer l-content">
         <ul class="links">
-          <li><a href="#">&copy; 2013 Rackspace, US</a></li>
+          <li>&copy; 2013 Rackspace, US</li>
           <li><a href="">Link Text</a></li>
           <li><a href="">Link Text</a></li>
         </ul>
