--- a/spec/screenshot/content-full.html
+++ b/spec/screenshot/content-full.html
@@ -11,30 +11,40 @@
 </head>
 <body>
   <div class="l-wrapper">
-    <div class="l-header">
-      <div class="nav-utility">
-        <div class="l-content">
-            <ul class="nav">
-              <li><a href="#">Link One</a></li>
-              <li><a href="#">Link Two</a></li>
-              <li><a href="#">Link Three</a></li>
-            </ul>
-        </div>
-      </div>
-      <div class="nav-primary">
-        <div class="l-content">
-          <div class="nav-brand">
-            <a href="#"><span></span></a>
-          </div>
+    <div class="nav-utility">
+      <div class="l-content">
           <ul class="nav">
             <li><a href="#">Link One</a></li>
-            <li class="active"><a href="#">Link Two</a></li>
+            <li><a href="#">Link Two</a></li>
             <li><a href="#">Link Three</a></li>
-            <li><a href="#">Link Four</a></li>
-            <li><a href="#">Link Five</a></li>
-            <li><a href="#">Link Six</a></li>
           </ul>
+      </div>
+    </div>
+    <div class="nav-primary">
+      <div class="l-content">
+        <div class="nav-brand">
+          <a href="#"><span></span></a>
         </div>
+        <ul class="nav">
+          <li><a href="#">Link One</a></li>
+          <li class="active"><a href="#">Link Two</a></li>
+          <li><a href="#">Link Three</a></li>
+          <li><a href="#">Link Four</a></li>
+          <li><a href="#">Link Five</a></li>
+          <li><a href="#">Link Six</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="nav-secondary">
+      <div class="l-content">
+        <ul class="nav">
+          <li><a href="#">Link One</a></li>
+          <li class="active"><a href="#">Link Two</a></li>
+          <li><a href="#">Link Three</a></li>
+          <li><a href="#">Link Four</a></li>
+          <li><a href="#">Link Five</a></li>
+          <li><a href="#">Link Six</a></li>
+        </ul>
       </div>
     </div>
     <div class="l-body">
