Updated Main Content markup
More familiar to production markup and makes room for back links.

--- a/spec/screenshot/content-detail.html
+++ b/spec/screenshot/content-detail.html
@@ -38,11 +38,13 @@
     <div class="l-body">
       <div class="l-inner">
         <div class="l-content">
-          <div class="sidebar pull-right">
-
-          </div>
           <div class="main">
+            <div class="sidebar pull-right">
 
+            </div>
+            <div class="content">
+
+            </div>
           </div>
         </div>
       </div>
