--- a/spec/screenshot/content-full.html
+++ b/spec/screenshot/content-full.html
@@ -51,7 +51,9 @@
       <div class="l-inner">
         <div class="l-content">
           <div class="main">
+            <div class="content">
 
+            </div>
           </div>
         </div>
       </div>
