--- a/spec/screenshot/content-list.html
+++ b/spec/screenshot/content-list.html
@@ -38,11 +38,13 @@
     <div class="l-body">
       <div class="l-inner">
         <div class="l-content">
-          <div class="sidebar">
-
-          </div>
           <div class="main">
+            <div class="sidebar">
 
+            </div>
+            <div class="content">
+
+            </div>
           </div>
         </div>
       </div>
