Add empty overlay.

--- a/spec/screenshot/list-table-empty.html
+++ b/spec/screenshot/list-table-empty.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Screenshot | List Table (Loading)</title>
+  <title>Screenshot | List Table (Empty)</title>
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
   <script type="text/javascript" src="/assets/canon.js"></script>
@@ -55,7 +55,13 @@
       </thead>
       <tbody></tbody>
     </table>
-    <div class="table-overlay table-overlay-loading"></div>
+    <div class="table-overlay table-overlay-empty">
+      <div class="table-overlay-content">
+        <div class="table-overlay-title">Title</div>
+        <div class="table-overlay-subtitle">Sub-Title</div>
+        <div class="table-overlay-message">This is an error message.</div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
