--- a/spec/screenshot/list-table-error.html
+++ b/spec/screenshot/list-table-error.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Screenshot | List Table</title>
+  <title>Screenshot | List Table (Error)</title>
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
   <script type="text/javascript" src="/assets/canon.js"></script>
