replace styles with susy span-columns

--- a/spec/screenshot/content-full.html
+++ b/spec/screenshot/content-full.html
@@ -36,12 +36,10 @@
       </div>
     </div>
     <div class="l-body">
-      <div class="l-inner">
-        <div class="l-content">
-          <div class="main">
-            <div class="content">
-
-            </div>
+      <div class="l-content">
+        <div class="main">
+          <div class="content">
+            <div></div>
           </div>
         </div>
       </div>
