--- a/spec/screenshot/content-detail.html
+++ b/spec/screenshot/content-detail.html
@@ -40,10 +40,10 @@
         <div class="l-content">
           <div class="main">
             <div class="sidebar pull-right">
-
+              <div></div>
             </div>
             <div class="content">
-
+              <div></div>
             </div>
           </div>
         </div>
