--- a/spec/screenshot/content-list.html
+++ b/spec/screenshot/content-list.html
@@ -36,15 +36,13 @@
       </div>
     </div>
     <div class="l-body">
-      <div class="l-inner">
-        <div class="l-content">
-          <div class="main">
-            <div class="sidebar">
-
-            </div>
-            <div class="content">
-
-            </div>
+      <div class="l-content">
+        <div class="main">
+          <div class="sidebar">
+            <div></div>
+          </div>
+          <div class="content">
+            <div></div>
           </div>
         </div>
       </div>
