[Feature][26] Add wrapper around content view headers.

--- a/spec/screenshot/content-view.html
+++ b/spec/screenshot/content-view.html
@@ -19,7 +19,9 @@
       <div class="content-view-header-title">Category</div>
     </div>
     <div class="content-view-section">
-      <div class="content-view-section-title">Title</div>
+      <div class="content-view-section-header">
+        <div class="content-view-section-title">Title</div>
+      </div>
       <div class="content-view-section-content">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -30,7 +32,9 @@
       </div>
     </div>
     <div class="content-view-section">
-      <div class="content-view-section-title">Title</div>
+      <div class="content-view-section-header">
+        <div class="content-view-section-title">Title</div>
+      </div>
       <div class="content-view-section-content">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
