--- a/spec/screenshot/content-view.html
+++ b/spec/screenshot/content-view.html
@@ -20,7 +20,7 @@
     </div>
     <div class="content-view-section">
       <div class="content-view-section-header">
-        <div class="content-view-section-title">Title</div>
+        <div class="content-view-section-title">Basic</div>
       </div>
       <div class="content-view-section-content">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -31,9 +31,38 @@
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </div>
-    <div class="content-view-section">
+    <div class="collapsible-view-section expanded">
       <div class="content-view-section-header">
-        <div class="content-view-section-title">Title</div>
+        <div class="content-view-section-toggle"></div>
+        <div class="content-view-section-title">Expanded</div>
+      </div>
+      <div class="content-view-section-content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="collapsible-view-section collapsed">
+      <div class="content-view-section-header">
+        <div class="content-view-section-toggle"></div>
+        <div class="content-view-section-title">Collapsed</div>
+      </div>
+      <div class="content-view-section-content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="collapsible-view-section loading">
+      <div class="content-view-section-header">
+        <div class="content-view-section-toggle"></div>
+        <div class="content-view-section-title">Loading</div>
       </div>
       <div class="content-view-section-content">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
