--- a/spec/screenshot/content-view.html
+++ b/spec/screenshot/content-view.html
@@ -33,6 +33,7 @@
     </div>
     <div class="collapsible-view-section expanded">
       <div class="content-view-section-header">
+        <div class="content-view-section-handle"></div>
         <div class="content-view-section-toggle"></div>
         <div class="content-view-section-title">Expanded</div>
       </div>
@@ -47,6 +48,7 @@
     </div>
     <div class="collapsible-view-section collapsed">
       <div class="content-view-section-header">
+        <div class="content-view-section-handle"></div>
         <div class="content-view-section-toggle"></div>
         <div class="content-view-section-title">Collapsed</div>
       </div>
@@ -61,6 +63,7 @@
     </div>
     <div class="collapsible-view-section loading">
       <div class="content-view-section-header">
+        <div class="content-view-section-handle"></div>
         <div class="content-view-section-toggle"></div>
         <div class="content-view-section-title">Loading</div>
       </div>
