--- a/spec/screenshot/content-view.html
+++ b/spec/screenshot/content-view.html
@@ -36,6 +36,7 @@
         <div class="content-view-section-handle"></div>
         <div class="content-view-section-toggle"></div>
         <div class="content-view-section-title">Expanded</div>
+        <div class="content-view-section-subtitle">This is a description.</div>
       </div>
       <div class="content-view-section-content">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -51,6 +52,7 @@
         <div class="content-view-section-handle"></div>
         <div class="content-view-section-toggle"></div>
         <div class="content-view-section-title">Collapsed</div>
+        <div class="content-view-section-subtitle">This is a description.</div>
       </div>
       <div class="content-view-section-content">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -66,6 +68,7 @@
         <div class="content-view-section-handle"></div>
         <div class="content-view-section-toggle"></div>
         <div class="content-view-section-title">Loading</div>
+        <div class="content-view-section-subtitle">This is a description.</div>
       </div>
       <div class="content-view-section-content">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
