[Feature][26] Shorter, clearer names for content sections.

--- a/spec/screenshot/content-view.html
+++ b/spec/screenshot/content-view.html
@@ -11,18 +11,18 @@
 </head>
 <body>
   <div class="content-view">
-    <div class="content-view-header">
-      <div class="content-view-header-actions">
+    <div class="header-section">
+      <div class="header-section-actions">
         <button class="btn">Actions</button>
       </div>
-      <div class="content-view-header-subtitle">Subtitle</div>
-      <div class="content-view-header-title">Category</div>
+      <div class="header-section-subtitle">Subtitle</div>
+      <div class="header-section-title">Category</div>
     </div>
-    <div class="content-view-section">
-      <div class="content-view-section-header">
-        <div class="content-view-section-title">Basic</div>
+    <div class="content-section">
+      <div class="content-section-header">
+        <div class="content-section-title">Basic</div>
       </div>
-      <div class="content-view-section-content">
+      <div class="content-section-body">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -31,14 +31,14 @@
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </div>
-    <div class="collapsible-view-section expanded">
-      <div class="content-view-section-header">
-        <div class="content-view-section-handle"></div>
-        <div class="content-view-section-toggle"></div>
-        <div class="content-view-section-title">Expanded</div>
-        <div class="content-view-section-subtitle">This is a description.</div>
+    <div class="collapsible-section expanded">
+      <div class="content-section-header">
+        <div class="content-section-handle"></div>
+        <div class="content-section-toggle"></div>
+        <div class="content-section-title">Expanded</div>
+        <div class="content-section-subtitle">This is a description.</div>
       </div>
-      <div class="content-view-section-content">
+      <div class="content-section-body">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -47,14 +47,14 @@
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </div>
-    <div class="collapsible-view-section collapsed">
-      <div class="content-view-section-header">
-        <div class="content-view-section-handle"></div>
-        <div class="content-view-section-toggle"></div>
-        <div class="content-view-section-title">Collapsed</div>
-        <div class="content-view-section-subtitle">This is a description.</div>
+    <div class="collapsible-section collapsed">
+      <div class="content-section-header">
+        <div class="content-section-handle"></div>
+        <div class="content-section-toggle"></div>
+        <div class="content-section-title">Collapsed</div>
+        <div class="content-section-subtitle">This is a description.</div>
       </div>
-      <div class="content-view-section-content">
+      <div class="content-section-body">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -63,14 +63,14 @@
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </div>
-    <div class="collapsible-view-section loading">
-      <div class="content-view-section-header">
-        <div class="content-view-section-handle"></div>
-        <div class="content-view-section-toggle"></div>
-        <div class="content-view-section-title">Loading</div>
-        <div class="content-view-section-subtitle">This is a description.</div>
+    <div class="collapsible-section loading">
+      <div class="content-section-header">
+        <div class="content-section-handle"></div>
+        <div class="content-section-toggle"></div>
+        <div class="content-section-title">Loading</div>
+        <div class="content-section-subtitle">This is a description.</div>
       </div>
-      <div class="content-view-section-content">
+      <div class="content-section-body">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
