[Test][26] Expand test cases for content view.

--- a/spec/screenshot/content-view.html
+++ b/spec/screenshot/content-view.html
@@ -31,9 +31,50 @@
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </div>
-    <div class="collapsible-section expanded">
+    <div class="content-section">
       <div class="content-section-header">
         <div class="content-section-handle"></div>
+        <div class="content-section-title">Ordered</div>
+      </div>
+      <div class="content-section-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="content-section">
+      <div class="content-section-header hover">
+        <div class="content-section-handle"></div>
+        <div class="content-section-title">Ordered (Header Hover)</div>
+      </div>
+      <div class="content-section-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="content-section">
+      <div class="content-section-header hover">
+        <div class="content-section-handle hover"></div>
+        <div class="content-section-title">Ordered (Handle Hover)</div>
+      </div>
+      <div class="content-section-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="collapsible-section expanded">
+      <div class="content-section-header">
         <div class="content-section-toggle"></div>
         <div class="content-section-title">Expanded</div>
         <div class="content-section-subtitle">This is a description.</div>
@@ -47,9 +88,23 @@
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </div>
+    <div class="collapsible-section expanded">
+      <div class="content-section-header hover">
+        <div class="content-section-toggle"></div>
+        <div class="content-section-title">Expanded (Hover)</div>
+        <div class="content-section-subtitle">This is a description.</div>
+      </div>
+      <div class="content-section-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
     <div class="collapsible-section collapsed">
       <div class="content-section-header">
-        <div class="content-section-handle"></div>
         <div class="content-section-toggle"></div>
         <div class="content-section-title">Collapsed</div>
         <div class="content-section-subtitle">This is a description.</div>
@@ -63,11 +118,40 @@
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </div>
+    <div class="collapsible-section collapsed">
+      <div class="content-section-header hover">
+        <div class="content-section-toggle"></div>
+        <div class="content-section-title">Collapsed (Hover)</div>
+        <div class="content-section-subtitle">This is a description.</div>
+      </div>
+      <div class="content-section-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
     <div class="collapsible-section loading">
       <div class="content-section-header">
-        <div class="content-section-handle"></div>
         <div class="content-section-toggle"></div>
         <div class="content-section-title">Loading</div>
+        <div class="content-section-subtitle">This is a description.</div>
+      </div>
+      <div class="content-section-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="collapsible-section loading">
+      <div class="content-section-header hover">
+        <div class="content-section-toggle"></div>
+        <div class="content-section-title">Loading (Hover)</div>
         <div class="content-section-subtitle">This is a description.</div>
       </div>
       <div class="content-section-body">
