--- a/examples/grid.html
+++ b/examples/grid.html
@@ -8,6 +8,9 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
   <style>
+    .show-grid {
+      text-align: center;
+    }
     .l-content {
       background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(0%, rgba(100, 100, 225, 0.25)), color-stop(6.69643%, rgba(100, 100, 225, 0.25)), color-stop(6.69643%, rgba(0, 0, 0, 0)), color-stop(8.48214%, rgba(0, 0, 0, 0)), color-stop(8.48214%, rgba(100, 100, 225, 0.25)), color-stop(15.17857%, rgba(100, 100, 225, 0.25)), color-stop(15.17857%, rgba(0, 0, 0, 0)), color-stop(16.96429%, rgba(0, 0, 0, 0)), color-stop(16.96429%, rgba(100, 100, 225, 0.25)), color-stop(23.66071%, rgba(100, 100, 225, 0.25)), color-stop(23.66071%, rgba(0, 0, 0, 0)), color-stop(25.44643%, rgba(0, 0, 0, 0)), color-stop(25.44643%, rgba(100, 100, 225, 0.25)), color-stop(32.14286%, rgba(100, 100, 225, 0.25)), color-stop(32.14286%, rgba(0, 0, 0, 0)), color-stop(33.92857%, rgba(0, 0, 0, 0)), color-stop(33.92857%, rgba(100, 100, 225, 0.25)), color-stop(40.625%, rgba(100, 100, 225, 0.25)), color-stop(40.625%, rgba(0, 0, 0, 0)), color-stop(42.41071%, rgba(0, 0, 0, 0)), color-stop(42.41071%, rgba(100, 100, 225, 0.25)), color-stop(49.10714%, rgba(100, 100, 225, 0.25)), color-stop(49.10714%, rgba(0, 0, 0, 0)), color-stop(50.89286%, rgba(0, 0, 0, 0)), color-stop(50.89286%, rgba(100, 100, 225, 0.25)), color-stop(57.58929%, rgba(100, 100, 225, 0.25)), color-stop(57.58929%, rgba(0, 0, 0, 0)), color-stop(59.375%, rgba(0, 0, 0, 0)), color-stop(59.375%, rgba(100, 100, 225, 0.25)), color-stop(66.07143%, rgba(100, 100, 225, 0.25)), color-stop(66.07143%, rgba(0, 0, 0, 0)), color-stop(67.85714%, rgba(0, 0, 0, 0)), color-stop(67.85714%, rgba(100, 100, 225, 0.25)), color-stop(74.55357%, rgba(100, 100, 225, 0.25)), color-stop(74.55357%, rgba(0, 0, 0, 0)), color-stop(76.33929%, rgba(0, 0, 0, 0)), color-stop(76.33929%, rgba(100, 100, 225, 0.25)), color-stop(83.03571%, rgba(100, 100, 225, 0.25)), color-stop(83.03571%, rgba(0, 0, 0, 0)), color-stop(84.82143%, rgba(0, 0, 0, 0)), color-stop(84.82143%, rgba(100, 100, 225, 0.25)), color-stop(91.51786%, rgba(100, 100, 225, 0.25)), color-stop(91.51786%, rgba(0, 0, 0, 0)), color-stop(93.30357%, rgba(0, 0, 0, 0)), color-stop(93.30357%, rgba(100, 100, 225, 0.25)), color-stop(100%, rgba(100, 100, 225, 0.25)), color-stop(100%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0)));
       background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, rgba(100, 100, 225, 0.25) 0%, rgba(100, 100, 225, 0.25) 6.69643%, rgba(0, 0, 0, 0) 6.69643%, rgba(0, 0, 0, 0) 8.48214%, rgba(100, 100, 225, 0.25) 8.48214%, rgba(100, 100, 225, 0.25) 15.17857%, rgba(0, 0, 0, 0) 15.17857%, rgba(0, 0, 0, 0) 16.96429%, rgba(100, 100, 225, 0.25) 16.96429%, rgba(100, 100, 225, 0.25) 23.66071%, rgba(0, 0, 0, 0) 23.66071%, rgba(0, 0, 0, 0) 25.44643%, rgba(100, 100, 225, 0.25) 25.44643%, rgba(100, 100, 225, 0.25) 32.14286%, rgba(0, 0, 0, 0) 32.14286%, rgba(0, 0, 0, 0) 33.92857%, rgba(100, 100, 225, 0.25) 33.92857%, rgba(100, 100, 225, 0.25) 40.625%, rgba(0, 0, 0, 0) 40.625%, rgba(0, 0, 0, 0) 42.41071%, rgba(100, 100, 225, 0.25) 42.41071%, rgba(100, 100, 225, 0.25) 49.10714%, rgba(0, 0, 0, 0) 49.10714%, rgba(0, 0, 0, 0) 50.89286%, rgba(100, 100, 225, 0.25) 50.89286%, rgba(100, 100, 225, 0.25) 57.58929%, rgba(0, 0, 0, 0) 57.58929%, rgba(0, 0, 0, 0) 59.375%, rgba(100, 100, 225, 0.25) 59.375%, rgba(100, 100, 225, 0.25) 66.07143%, rgba(0, 0, 0, 0) 66.07143%, rgba(0, 0, 0, 0) 67.85714%, rgba(100, 100, 225, 0.25) 67.85714%, rgba(100, 100, 225, 0.25) 74.55357%, rgba(0, 0, 0, 0) 74.55357%, rgba(0, 0, 0, 0) 76.33929%, rgba(100, 100, 225, 0.25) 76.33929%, rgba(100, 100, 225, 0.25) 83.03571%, rgba(0, 0, 0, 0) 83.03571%, rgba(0, 0, 0, 0) 84.82143%, rgba(100, 100, 225, 0.25) 84.82143%, rgba(100, 100, 225, 0.25) 91.51786%, rgba(0, 0, 0, 0) 91.51786%, rgba(0, 0, 0, 0) 93.30357%, rgba(100, 100, 225, 0.25) 93.30357%, rgba(100, 100, 225, 0.25) 100%, rgba(0, 0, 0, 0) 100%, rgba(0, 0, 0, 0) 100%);
@@ -144,76 +147,162 @@
     </div>
     <div class="l-body">
       <div class="l-inner">
-        <div class="l-content">
+        <div class="l-content show-grid">
           <div class="main">
             <div class="sidebar pull-right">
               <div>
-                <h6>Typography</h6>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor <strong>incididunt ut labore</strong> et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation <em>ullamco laboris nisi</em> ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum <a href="#">dolore eu fugiat nulla</a> pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>3 column grid via nested classes</p>
+                <div class="row">
+                  <div class="span-3-3" style="background: #b8b8b8; margin-bottom: 10px;">.full or .span-3-3</div>
+                </div>
+                <div class="row">
+                  <div class="span-1-3" style="background: #b8b8b8; margin-bottom: 10px;">.span-1-3</div>
+                  <div class="span-2-3 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-2-3</div>
+                </div>
               </div>
             </div>
             <div class="content">
               <div>
-                <h1>Typography</h1>
-                <h2>Typography</h2>
-                <h3>Typography</h3>
-                <h4>Typography</h4>
-                <h5>Typography</h5>
-                <h6>Typography</h6>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor <strong>incididunt ut labore</strong> et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation <em>ullamco laboris nisi</em> ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum <a href="#">dolore eu fugiat nulla</a> pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>12 column grid</p>
+                <div class="row">
+                  <div class="span-12" style="background: #b8b8b8; margin-bottom: 10px;">.full or .span-12</div>
+                </div>
+                <div class="row">
+                  <div class="span-1" style="background: #b8b8b8; margin-bottom: 10px;">.span-1</div>
+                  <div class="span-11 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-11</div>
+                </div>
+                <div class="row">
+                  <div class="span-2" style="background: #b8b8b8; margin-bottom: 10px;">.span-2</div>
+                  <div class="span-10 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-10</div>
+                </div>
+                <div class="row">
+                  <div class="span-3" style="background: #b8b8b8; margin-bottom: 10px;">.span-3</div>
+                  <div class="span-9 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-9</div>
+                </div>
+                <div class="row">
+                  <div class="span-4" style="background: #b8b8b8; margin-bottom: 10px;">.span-4</div>
+                  <div class="span-8 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-8</div>
+                </div>
+                <div class="row">
+                  <div class="span-5" style="background: #b8b8b8; margin-bottom: 10px;">.span-5</div>
+                  <div class="span-7 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-7</div>
+                </div>
+                <div class="row">
+                  <div class="span-6" style="background: #b8b8b8; margin-bottom: 10px;">.span-6</div>
+                  <div class="span-6 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-6</div>
+                </div>
+                <div class="row">
+                  <div class="span-7" style="background: #b8b8b8; margin-bottom: 10px;">.span-7</div>
+                  <div class="span-5 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-5</div>
+                </div>
+                <div class="row">
+                  <div class="span-8" style="background: #b8b8b8; margin-bottom: 10px;">.span-8</div>
+                  <div class="span-4 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-4</div>
+                </div>
+                <div class="row">
+                  <div class="span-9" style="background: #b8b8b8; margin-bottom: 10px;">.span-9</div>
+                  <div class="span-3 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-3</div>
+                </div>
+                <div class="row">
+                  <div class="span-10" style="background: #b8b8b8; margin-bottom: 10px;">.span-10</div>
+                  <div class="span-2 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-2</div>
+                </div>
+                <div class="row">
+                  <div class="span-11" style="background: #b8b8b8; margin-bottom: 10px;">.span-11</div>
+                  <div class="span-1 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-1</div>
+                </div>
+                <p>Nested Grid</p>
+                <div class="row">
+                  <div class="span-5" style="background: #b8b8b8; margin-bottom: 10px;">
+                    <p>.span-5</p>
+                    <div class="span-3-5" style="background: #999; margin-bottom: 10px;">.span-3-5</div>
+                    <div class="span-2-5 omega" style="background: #999; margin-bottom: 10px;">.span-2-5</div>
+                  </div>
+                  <div class="span-7 omega" style="background: #b8b8b8; margin-bottom: 10px;">
+                    <p>.span-7</p>
+                    <div class="span-2-7" style="background: #999; margin-bottom: 10px;">.span-2-7</div>
+                    <div class="span-5-7 omega" style="background: #999; margin-bottom: 10px;">.span-5-7</div>
+                  </div>
+                </div>
+                <p>9 column grid via nested classes</p>
+                <div class="row">
+                  <div class="span-9-9" style="background: #b8b8b8; margin-bottom: 10px;">.full or .span-9-9</div>
+                </div>
+                <div class="row">
+                  <div class="span-1-9" style="background: #b8b8b8; margin-bottom: 10px;">.span-1-9</div>
+                  <div class="span-8-9 omega" style="background: #b8b8b8; margin-bottom: 10px;">span-8-9</div>
+                </div>
+                <div class="row">
+                  <div class="span-4-9" style="background: #b8b8b8; margin-bottom: 10px;">.span-4-9</div>
+                  <div class="span-5-9 omega" style="background: #b8b8b8; margin-bottom: 10px;">span-5-9</div>
+                </div>
+                <div class="row">
+                  <div class="span-6-9" style="background: #b8b8b8; margin-bottom: 10px;">.span-6-9</div>
+                  <div class="span-3-9 omega" style="background: #b8b8b8; margin-bottom: 10px;">span-3-9</div>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="l-content" style="text-align: center; margin-top: 30px;">
           <p>12 column grid</p>
-          <div class="span-12" style="background: #b8b8b8; margin-bottom: 10px;">.full or .span-12</div>
-          <div class="span-1" style="background: #b8b8b8; margin-bottom: 10px;">.span-1</div>
-          <div class="span-11 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-11</div>
-          <div class="span-2" style="background: #b8b8b8; margin-bottom: 10px;">.span-2</div>
-          <div class="span-10 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-10</div>
-          <div class="span-3" style="background: #b8b8b8; margin-bottom: 10px;">.span-3</div>
-          <div class="span-9 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-9</div>
-          <div class="span-4" style="background: #b8b8b8; margin-bottom: 10px;">.span-4</div>
-          <div class="span-8 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-8</div>
-          <div class="span-5" style="background: #b8b8b8; margin-bottom: 10px;">.span-5</div>
-          <div class="span-7 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-7</div>
-          <div class="span-6" style="background: #b8b8b8; margin-bottom: 10px;">.span-6</div>
-          <div class="span-6 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-6</div>
-          <div class="span-7" style="background: #b8b8b8; margin-bottom: 10px;">.span-7</div>
-          <div class="span-5 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-5</div>
-          <div class="span-8" style="background: #b8b8b8; margin-bottom: 10px;">.span-8</div>
-          <div class="span-4 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-4</div>
-          <div class="span-9" style="background: #b8b8b8; margin-bottom: 10px;">.span-9</div>
-          <div class="span-3 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-3</div>
-          <div class="span-10" style="background: #b8b8b8; margin-bottom: 10px;">.span-10</div>
-          <div class="span-2 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-2</div>
-          <div class="span-11" style="background: #b8b8b8; margin-bottom: 10px;">.span-11</div>
-          <div class="span-1 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-1</div>
-        </div>
-        <div class="l-content" style="text-align: center;">
-          <p>Nested Grid</p>
-          <div class="span-5" style="background: #b8b8b8; margin-bottom: 10px;">
-            <p>.span-5</p>
-            <div class="span-3-5" style="background: #999; margin-bottom: 10px;">.span-3-5</div>
-            <div class="span-2-5 omega" style="background: #999; margin-bottom: 10px;">.span-2-5</div>
+          <div class="row">
+            <div class="span-12" style="background: #b8b8b8; margin-bottom: 10px;">.full or .span-12</div>
           </div>
-          <div class="span-7 omega" style="background: #b8b8b8; margin-bottom: 10px;">
-            <p>.span-7</p>
-            <div class="span-2-7" style="background: #999; margin-bottom: 10px;">.span-2-7</div>
-            <div class="span-5-7 omega" style="background: #999; margin-bottom: 10px;">.span-5-7</div>
+          <div class="row">
+            <div class="span-1" style="background: #b8b8b8; margin-bottom: 10px;">.span-1</div>
+            <div class="span-11 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-11</div>
+          </div>
+          <div class="row">
+            <div class="span-2" style="background: #b8b8b8; margin-bottom: 10px;">.span-2</div>
+            <div class="span-10 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-10</div>
+          </div>
+          <div class="row">
+            <div class="span-3" style="background: #b8b8b8; margin-bottom: 10px;">.span-3</div>
+            <div class="span-9 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-9</div>
+          </div>
+          <div class="row">
+            <div class="span-4" style="background: #b8b8b8; margin-bottom: 10px;">.span-4</div>
+            <div class="span-8 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-8</div>
+          </div>
+          <div class="row">
+            <div class="span-5" style="background: #b8b8b8; margin-bottom: 10px;">.span-5</div>
+            <div class="span-7 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-7</div>
+          </div>
+          <div class="row">
+            <div class="span-6" style="background: #b8b8b8; margin-bottom: 10px;">.span-6</div>
+            <div class="span-6 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-6</div>
+          </div>
+          <div class="row">
+            <div class="span-7" style="background: #b8b8b8; margin-bottom: 10px;">.span-7</div>
+            <div class="span-5 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-5</div>
+          </div>
+          <div class="row">
+            <div class="span-8" style="background: #b8b8b8; margin-bottom: 10px;">.span-8</div>
+            <div class="span-4 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-4</div>
+          </div>
+          <div class="row">
+            <div class="span-9" style="background: #b8b8b8; margin-bottom: 10px;">.span-9</div>
+            <div class="span-3 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-3</div>
+          </div>
+          <div class="row">
+            <div class="span-10" style="background: #b8b8b8; margin-bottom: 10px;">.span-10</div>
+            <div class="span-2 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-2</div>
+          </div>
+          <div class="row">
+            <div class="span-11" style="background: #b8b8b8; margin-bottom: 10px;">.span-11</div>
+            <div class="span-1 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-1</div>
+          </div>
+          <p>Nested Grid</p>
+          <div class="row">
+            <div class="span-5" style="background: #b8b8b8; margin-bottom: 10px;">
+              <p>.span-5</p>
+              <div class="span-3-5" style="background: #999; margin-bottom: 10px;">.span-3-5</div>
+              <div class="span-2-5 omega" style="background: #999; margin-bottom: 10px;">.span-2-5</div>
+            </div>
+            <div class="span-7 omega" style="background: #b8b8b8; margin-bottom: 10px;">
+              <p>.span-7</p>
+              <div class="span-2-7" style="background: #999; margin-bottom: 10px;">.span-2-7</div>
+              <div class="span-5-7 omega" style="background: #999; margin-bottom: 10px;">.span-5-7</div>
+            </div>
           </div>
         </div>
       </div>
