update grid markup

--- a/spec/screenshot/grid.html
+++ b/spec/screenshot/grid.html
@@ -7,6 +7,11 @@
   <title>Canon Grid</title>
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
+  <style>
+    .show-grid {
+      text-align: center;
+    }
+  </style>
   <script type="text/javascript" src="/assets/canon.js"></script>
 </head>
 <body>
@@ -39,33 +44,57 @@
     </div>
     <div class="l-body">
       <div class="l-inner">
-        <div class="l-content" style="text-align: center; margin-top: 30px;">
+        <div class="l-content show-grid">
           <p>12 column grid</p>
-          <div class="span-12" style="background: #b8b8b8; margin-bottom: 10px;">.full or .span-12</div>
-          <div class="span-1" style="background: #b8b8b8; margin-bottom: 10px;">.span-1</div>
-          <div class="span-11 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-11</div>
-          <div class="span-2" style="background: #b8b8b8; margin-bottom: 10px;">.span-2</div>
-          <div class="span-10 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-10</div>
-          <div class="span-3" style="background: #b8b8b8; margin-bottom: 10px;">.span-3</div>
-          <div class="span-9 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-9</div>
-          <div class="span-4" style="background: #b8b8b8; margin-bottom: 10px;">.span-4</div>
-          <div class="span-8 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-8</div>
-          <div class="span-5" style="background: #b8b8b8; margin-bottom: 10px;">.span-5</div>
-          <div class="span-7 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-7</div>
-          <div class="span-6" style="background: #b8b8b8; margin-bottom: 10px;">.span-6</div>
-          <div class="span-6 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-6</div>
-          <div class="span-7" style="background: #b8b8b8; margin-bottom: 10px;">.span-7</div>
-          <div class="span-5 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-5</div>
-          <div class="span-8" style="background: #b8b8b8; margin-bottom: 10px;">.span-8</div>
-          <div class="span-4 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-4</div>
-          <div class="span-9" style="background: #b8b8b8; margin-bottom: 10px;">.span-9</div>
-          <div class="span-3 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-3</div>
-          <div class="span-10" style="background: #b8b8b8; margin-bottom: 10px;">.span-10</div>
-          <div class="span-2 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-2</div>
-          <div class="span-11" style="background: #b8b8b8; margin-bottom: 10px;">.span-11</div>
-          <div class="span-1 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-1</div>
+          <div class="row">
+            <div class="span-12" style="background: #b8b8b8; margin-bottom: 10px;">.full or .span-12</div>
+          </div>
+          <div class="row">
+            <div class="span-1" style="background: #b8b8b8; margin-bottom: 10px;">.span-1</div>
+            <div class="span-11 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-11</div>
+          </div>
+          <div class="row">
+            <div class="span-2" style="background: #b8b8b8; margin-bottom: 10px;">.span-2</div>
+            <div class="span-10 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-10</div>
+          </div>
+          <div class="row">
+            <div class="span-3" style="background: #b8b8b8; margin-bottom: 10px;">.span-3</div>
+            <div class="span-9 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-9</div>
+          </div>
+          <div class="row">
+            <div class="span-4" style="background: #b8b8b8; margin-bottom: 10px;">.span-4</div>
+            <div class="span-8 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-8</div>
+          </div>
+          <div class="row">
+            <div class="span-5" style="background: #b8b8b8; margin-bottom: 10px;">.span-5</div>
+            <div class="span-7 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-7</div>
+          </div>
+          <div class="row">
+            <div class="span-6" style="background: #b8b8b8; margin-bottom: 10px;">.span-6</div>
+            <div class="span-6 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-6</div>
+          </div>
+          <div class="row">
+            <div class="span-7" style="background: #b8b8b8; margin-bottom: 10px;">.span-7</div>
+            <div class="span-5 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-5</div>
+          </div>
+          <div class="row">
+            <div class="span-8" style="background: #b8b8b8; margin-bottom: 10px;">.span-8</div>
+            <div class="span-4 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-4</div>
+          </div>
+          <div class="row">
+            <div class="span-9" style="background: #b8b8b8; margin-bottom: 10px;">.span-9</div>
+            <div class="span-3 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-3</div>
+          </div>
+          <div class="row">
+            <div class="span-10" style="background: #b8b8b8; margin-bottom: 10px;">.span-10</div>
+            <div class="span-2 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-2</div>
+          </div>
+          <div class="row">
+            <div class="span-11" style="background: #b8b8b8; margin-bottom: 10px;">.span-11</div>
+            <div class="span-1 omega" style="background: #b8b8b8; margin-bottom: 10px;">.span-1</div>
+          </div>
         </div>
-        <div class="l-content" style="text-align: center;">
+        <div class="l-content show-grid">
           <p>Nested Grid</p>
           <div class="span-5" style="background: #b8b8b8; margin-bottom: 10px;">
             <p>.span-5</p>
