Update URL structure to support RequireJS.

--- a/spec/unit/runner.html
+++ b/spec/unit/runner.html
@@ -5,12 +5,12 @@
 
   <title>Canon | Unit Tests</title>
 
-  <link rel="stylesheet" type="text/css" href="/assets/mocha/mocha.css">
+  <link rel="stylesheet" type="text/css" href="/vendor/mocha/mocha.css">
 
-  <script type="text/javascript" src="/assets/chai/chai.js"></script>
-  <script type="text/javascript" src="/assets/mocha/mocha.js"></script>
-  <script type="text/javascript" src="/assets/sinon/lib/sinon.js"></script>
-  <script type="text/javascript" src="/assets/sinon-chai/lib/sinon-chai.js"></script>
+  <script type="text/javascript" src="/vendor/chai/chai.js"></script>
+  <script type="text/javascript" src="/vendor/mocha/mocha.js"></script>
+  <script type="text/javascript" src="/vendor/sinon/lib/sinon.js"></script>
+  <script type="text/javascript" src="/vendor/sinon-chai/lib/sinon-chai.js"></script>
 
   <script type="text/javascript">
 
@@ -24,7 +24,7 @@
     should = chai.should();
   </script>
 
-  <script type="text/javascript" src="/assets/runner.js"></script>
+  <script type="text/javascript" src="/spec/example_spec.js"></script>
 </head>
 <body>
   <div id="mocha"></div>
